app/flaskapp_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flaskapp
  name: flaskapp

spec:

  replicas: 1

  selector:
    matchLabels:
      app: flaskapp
      tier: app
# This template field is a regular pod configuration
  template:
    metadata:
      labels:
        app: flaskapp
        tier: app

    spec:
      containers:
        - name: flaskapp
          image: ankurpatel/flaskapp:latest
          imagePullPolicy: Always
          ports:
            - name: flaskapp
              containerPort: 5000
      restartPolicy: Always
      
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  labels:
    service: flaskapp

spec:
  type: NodePort                            
  selector:
    app: flaskapp                           
  ports:
    - port: 5000                            
      targetPort: 5000                      
      nodePort: 30036
