app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
spec:
  rules:
  - host: nflteams.com
    http:
      paths:
      - path: /
        backend:
          serviceName: flask
          servicePort: 5000
